--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@ td {
 
 <table border="1" style="width:11%">
 <tr style="background-color:#ceeaff;color:#000000;">
+<th>1</th> <th>2</th> <th>3</th> <th>4</th> <th>5</th> <th>6</th>
+</tr>
+<tr>
+<th class="color4">2</th> <td>a</td> <td class="color">b</td> <td class="color">c</td> <td>d</td> <td>e</td>
+</tr>
+<tr>
+<th class="color4">3</th> <td>f</td> <td>g</td> <td>h</td> <td>i</td> <td class="color2">j</td>
+</tr>
+<tr>
+<th class="color4">4</th> <td>k</td> <td>l</td> <td>m</td> <td>n</td> <td class="color2">o</td>
+</tr>
+<tr>
+<th class="color4">5</th> <td class="color3">p</td> <td class="color3">q</td> <td class="color3">r</td> <td>s</td> <td>t</td> 
+</tr>
+<tr>
+<th class="color4">6</th> <td class="color3">u</td> <td class="color3">v</td> <td class="color3">w</td> <td>y</td> <td>z</td>
+</tr>
+</table>
+
+<table border="1" style="width:11%">
+<tr style="background-color:#ceeaff;color:#000000;">
 <th>1</th> <th>2</th> <th>3</th> <th>4</th> <th style="width:20%">5</th> <th>6</th>
 </tr>
 <tr>
@@ -51,6 +72,28 @@ td {
 <th class="color4">6</th> <td>y</td> <td>z</td>
 </tr>
 </table>
+
+<table border="1" style="width:11%">
+<tr style="background-color:#ceeaff;color:#000000;">
+<th class="color4">1</th> <th>2</th> <th>3</th> <th>4</th> <th>5</th> <th>6</th>
+</tr>
+<tr>
+<th class="color4">2</th> <td>a</td> <td colspan="2" rowspan="3" class="color">b, c, g, h, l, m</td> <td>d</td> <td>e</td>
+</tr>
+<tr>
+<th class="color4">3</th> <td>f</td> <td>i</td> <td>j</td>
+</tr>
+<tr>
+<th class="color4">4</th> <td>k</td> <td>n</td> <td>o</td>
+</tr>
+<tr>
+<th class="color4">5</th> <td>p</td> <td>q</td> <td>r</td> <td>s</td> <td>t</td> 
+</tr>
+<tr>
+<th class="color4">6</th> <td>u</td> <td>v</td> <td>w</td> <td>y</td> <td>z</td>
+</tr>
+</table>
+
 
 </body>
 
